dt-bindings:net:wireless:ieee80211: introduce regdomain property
Add regdomain property to ieee80211 binding

--- a/Documentation/devicetree/bindings/net/wireless/ieee80211.yaml
+++ b/Documentation/devicetree/bindings/net/wireless/ieee80211.yaml
@@ -30,6 +30,15 @@ properties:
       different 5 GHz subbands. Using them incorrectly could not work or
       decrease performance noticeably
 
+  regdomain:
+    minItems: 1
+    maxItems: 1
+    contains:
+      enum:
+        - FCC
+        - ETSI
+        - JP
+
 additionalProperties: true
 
 examples:
